# Racing-AI

./: .gitignore  Car.py  ML.py  Main.py  README.md  Track.py  circle.txt  pyproject.toml  track_1.txt  woo.txt
assets/: track_1.txt
src/car-ai/: _car.py  _ml.py  _track.py  main.py
src/racing-ai/: env.py  main.py  ml_torch.py
src/racing_ai/: __main__.py  _keras.py  car.py  env.py  gui.py  main.py  ml_keras.py  ml_torch.py  track.py  train.py
src/racing_ai/game/: car.py
src/racing_ai/ml/: __main__.py  _keras.py  env.py  train.py
